media/sabnzbd/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: &app sabnzbd
  labels:
    app: *app
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  serviceName: *app
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: sabnzbd
          image: ${SECRET_HARBOR_URL}/sabnzbd:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "2048Mi"
              cpu: 800m
            requests:
              memory: "1024Mi"
              cpu: 300m
          livenessProbe:
            httpGet:
              path: /api?mode=version
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          ports:
            - name: nzb-web
              containerPort: 8080
          volumeMounts:
            - name: sabnzbd-config
              mountPath: /config
            - name: sabnzbd-incomplete-downloads
              mountPath: /incomplete-downloads
            - name: sabnzbd-downloads
              mountPath: /downloads
      volumes:
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-config-pvc
        - name: default-config
          configMap:
            name: sabnzbd-config
        - name: sabnzbd-incomplete-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-incomplete-downloads-pvc
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads-pvc
      serviceName: sabnzbd-app
      revisionHistoryLimit: 0
