media/sabnzbd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: sabnzbd
