media/sabnzbd/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`media.${SECRET_DOMAIN_0}`) && PathPrefix(`/sabnzbd`)"
      kind: Rule
      # middlewares:
      #   - name: media-authentik
      services:
        - name: sabnzbd-svc
          port: 80
  tls: {}
